--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Cake Islands/Assets/Art.meta
+Cake Islands/Assets/Art.meta
+Cake Islands/Assets/Music.meta
+Cake Islands/Library/assetDatabase3
+Cake Islands/Library/assetDatabase3
