--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ Cake Islands/Assets/Art.meta
 Cake Islands/Assets/Music.meta
 Cake Islands/Library/assetDatabase3
 Cake Islands/Library/assetDatabase3
+Cake Islands/Library/StateCache/Hierarchy/f3b519-mainStage.json
+Cake Islands/Library/StateCache/SceneView/76f067-mainStage.json
+Cake Islands/Library/assetDatabase3
