--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ Cake Islands/Library/assetDatabase3
 Cake Islands/Library/StateCache/Hierarchy/f3b519-mainStage.json
 Cake Islands/Library/StateCache/SceneView/76f067-mainStage.json
 Cake Islands/Library/assetDatabase3
+Cake Islands/Library/StateCache/SceneView/76f067-mainStage.json
+Cake Islands/Library/shadercompiler-UnityShaderCompiler.exe0.log
+Cake Islands/Library/assetDatabase3
