--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ Cake Islands/Library/assetDatabase3
 Cake Islands/Library/StateCache/SceneView/76f067-mainStage.json
 Cake Islands/Library/shadercompiler-UnityShaderCompiler.exe0.log
 Cake Islands/Library/assetDatabase3
+Cake Islands/Library/assetDatabase3
+*.dwlt
+*.json
+*.json
